--- a/tictactoeAI.html
+++ b/tictactoeAI.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tic Tac Toe Game</title>
-	<link rel="stylesheet" type="text/css" href="../CSS/tictactoeAI.css">
+	<link rel="stylesheet" type="text/css" href="CSS/tictactoeAI.css">
 	<script>
 		var playerMoves = [];
 		var computerPlayer = "O";
