--- a/tictactoeAI.html
+++ b/tictactoeAI.html
@@ -149,6 +149,7 @@
 			document.getElementById("7").value = "";
 			document.getElementById("8").value = "";
 			document.getElementById("9").value = "";
+			document.getElementById("enter-name").value = "";
 		}
 
 		function whoWon() {
